--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,9 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         />
+    <View
+        style="@style/haveing"
+        />
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation_container"
         style="@style/AppTheme"
