--- a/app/src/main/res/layout/toobal_titleblue.xml
+++ b/app/src/main/res/layout/toobal_titleblue.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/demen_20dp"
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/demen_20dp"-->
 
-        />
+        <!--/>-->
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
