--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -1,42 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+    android:orientation="vertical"
     android:layout_height="fill_parent">
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/ll"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
 
-        <!--<include layout="@layout/toollbar_title" />-->
-    <!--</LinearLayout>-->
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll">
-
-        <!--<LinearLayout-->
-            <!--android:id="@+id/linearLayout"-->
-            <!--android:layout_width="wrap_content"-->
-
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
-
-        <!--</LinearLayout>-->
-
         <SurfaceView
-
             android:id="@+id/preview_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-
-
+            android:layout_centerInParent="true"
+            />
         <zz.hjzn.hjwallet.zxing.ViewfinderView
             android:id="@+id/viewfinder_view"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content" />
         <ImageButton
             android:id="@+id/imageView2"
@@ -46,7 +31,12 @@
             android:layout_alignParentRight="true"
             android:layout_marginEnd="34dp"
             android:layout_marginRight="34dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="80dp"
             android:background="@mipmap/icon_shanguangbu" />
     </RelativeLayout>
-</FrameLayout>
+    </FrameLayout>
+    <include
+        layout="@layout/toobal_titleblue"
+
+        />
+</RelativeLayout>
