--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
     <style name="DialogStyle" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -38,5 +38,10 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">@dimen/text_dimens15</item>
     </style>
-
+    <style name="ButtonBluematch">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/demen_40dp</item>
+        <item name="android:background">@drawable/shape_payment_affblue</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
