--- a/app/src/main/res/layout/activity_my_receipt_code.xml
+++ b/app/src/main/res/layout/activity_my_receipt_code.xml
@@ -31,6 +31,30 @@
         android:padding="@dimen/text_dimens10"
         android:text="@string/receipt_savepic"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/text_dimens10"
+        android:gravity="center_horizontal"
+        >
+        <TextView
+            style="@style/TextView13black"
+            android:layout_gravity="center_vertical"
+            android:text="@string/address"
+            />
+        <TextView
+            android:id="@+id/tv_address"
+            style="@style/TextView13black"
+            android:textColor="@color/colorPrimary"
+            android:enabled="true"
+            android:lines="1"
+            android:focusable="true"
+            android:longClickable="true"
+            android:layout_gravity="center_horizontal"
+            />
+    </LinearLayout>
+
 
 
 </LinearLayout>
