--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -1,42 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:orientation="vertical"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ll">
-        <SurfaceView
-            android:id="@+id/preview_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            />
-        <zz.hjzn.hjwallet.zxing.ViewfinderView
-            android:id="@+id/viewfinder_view"
-            android:layout_width="wrap_content"
 
-            android:layout_height="wrap_content" />
-        <ImageButton
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="34dp"
-            android:layout_marginRight="34dp"
-            android:layout_marginTop="80dp"
-            android:background="@mipmap/icon_shanguangbu" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/ll">
+
+            <SurfaceView
+                android:id="@+id/preview_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+            <zz.hjzn.hjwallet.zxing.ViewfinderView
+                android:id="@+id/viewfinder_view"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="34dp"
+                android:layout_marginRight="34dp"
+                android:layout_marginTop="80dp"
+                android:background="@mipmap/icon_shanguangbu" />
+
+            <Button
+                android:id="@+id/btn_seletepic"
+                android:layout_width="@dimen/demen_40dp"
+                android:layout_height="@dimen/demen_40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/demen_50dp"
+                android:background="@mipmap/icon_scxiangce" />
+        </RelativeLayout>
     </FrameLayout>
-    <include
-        layout="@layout/toobal_titleblue"
+
+    <include layout="@layout/toobal_titleblue"
 
         />
 </RelativeLayout>
