头像 识别图片二维码

--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -8,24 +8,19 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/ll">
-
             <SurfaceView
                 android:id="@+id/preview_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true" />
-
             <zz.hjzn.hjwallet.zxing.ViewfinderView
                 android:id="@+id/viewfinder_view"
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content" />
-
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
@@ -36,19 +31,16 @@
                 android:layout_marginRight="34dp"
                 android:layout_marginTop="80dp"
                 android:background="@mipmap/icon_shanguangbu" />
-
             <Button
                 android:id="@+id/btn_seletepic"
-                android:layout_width="@dimen/demen_40dp"
-                android:layout_height="@dimen/demen_40dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/demen_50dp"
-                android:background="@mipmap/icon_scxiangce" />
+                android:layout_width="@dimen/demen_30dp"
+                android:layout_height="@dimen/demen_30dp"
+                android:layout_marginLeft="@dimen/demen_34dp"
+                android:layout_marginTop="@dimen/demen_80dp"
+                android:background="@mipmap/icon_seletecode" />
         </RelativeLayout>
     </FrameLayout>
-
     <include layout="@layout/toobal_titleblue"
-
         />
+
 </RelativeLayout>
