头像 识别图片二维码

--- a/app/src/main/res/layout/activity_persion_center.xml
+++ b/app/src/main/res/layout/activity_persion_center.xml
@@ -116,6 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/demen_10dp"
+        android:visibility="gone"
         android:orientation="horizontal"
         >
         <TextView
