头像 识别图片二维码

--- a/app/src/main/res/layout/activity_start_payment.xml
+++ b/app/src/main/res/layout/activity_start_payment.xml
@@ -9,7 +9,7 @@
     <include
         layout="@layout/toobal_titleblue"
         />
-        <ImageView
+        <zz.hjzn.hjwallet.weight.CircleImageView
             android:layout_width="@dimen/demen_80dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/demen_30dp"
@@ -37,6 +37,7 @@
         <TextView
             android:id="@+id/tv_name1"
             android:text="(*小)"
+            android:layout_marginLeft="@dimen/demen_5dp"
             style="@style/TextView15black"
             android:layout_gravity="center_horizontal"
             />
