头像 识别图片二维码

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,46 +3,191 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-
     tools:context=".fragments.HomeFragment">
-        <com.youth.banner.Banner
-            android:id="@+id/banner"
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-        </com.youth.banner.Banner>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/icon_sytitlebg"
+        >
         <LinearLayout
-            android:paddingTop="@dimen/demen_20dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/demen_10dp"
+            android:layout_marginLeft="@dimen/demen_15dp"
+            android:layout_centerVertical="true"
             >
-            <RelativeLayout
-                android:layout_width="@dimen/demen_100dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/shape_home_sao_bg"
-                android:layout_height="@dimen/demen_100dp">
-                <Button
-                    android:id="@+id/btn_flick"
-                    android:layout_width="@dimen/demen_60dp"
-                    android:layout_centerInParent="true"
-                    android:background="@mipmap/icon_scan"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="@dimen/demen_60dp"
+            <ImageView
+                android:layout_width="@dimen/demen_15dp"
+                android:layout_height="@dimen/demen_18dp"
+                android:src="@mipmap/icon_action"
 
+                />
+                <TextView
+                    style="@style/TextView14black"
+                    android:text="定位"
+                    android:layout_marginLeft="@dimen/demen_6dp"
+                    android:textColor="@color/white"
+                    />
+        </LinearLayout>
+            <RelativeLayout
+                android:layout_width="@dimen/demen_19dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/demen_25dp"
+                android:layout_height="@dimen/demen_19dp">
+                <ImageView
+                    android:layout_width="@dimen/demen_18dp"
+                    android:layout_height="@dimen/demen_18dp"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/icon_mess"
+                    />
+                <ImageView
+                    android:layout_width="5dp"
+                    android:layout_height="5dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@mipmap/icon_redcir"
                     />
             </RelativeLayout>
-            <Button
-                android:id="@+id/btn_receiptcode"
-                android:layout_width="@dimen/demen_100dp"
-                android:layout_marginTop="@dimen/demen_50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_height="@dimen/demen_100dp"
-                android:textColor="@color/white"
-                android:background="@drawable/shape_home_wodecode_bg"
-                android:text="收款码"
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/white"
+       android:paddingBottom="@dimen/demen_12dp"
+        >
+        <LinearLayout
+            android:id="@+id/ll_saoma"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="@dimen/demen_31dp"
+                android:layout_height="@dimen/demen_27dp"
+                android:layout_marginTop="@dimen/demen_11dp"
+                android:src="@mipmap/icon_saoma"
+                />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/saoyisao"
+                    android:layout_marginTop="@dimen/demen_15dp"
+                    android:textSize="@dimen/text_dimens16"
+                    android:textColor="@color/black_text"
+                    />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_fukuan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="@dimen/demen_31dp"
+                android:layout_height="@dimen/demen_27dp"
+                android:layout_marginTop="@dimen/demen_11dp"
+                android:src="@mipmap/icon_fukuan"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fukuan"
+                android:layout_marginTop="@dimen/demen_15dp"
+                android:textSize="@dimen/text_dimens16"
+                android:textColor="@color/black_text"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_shoukuan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="@dimen/demen_31dp"
+                android:layout_height="@dimen/demen_27dp"
+                android:layout_marginTop="@dimen/demen_11dp"
+                android:src="@mipmap/icon_shoukuan"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/shoukuan"
+                android:layout_marginTop="@dimen/demen_15dp"
+                android:textSize="@dimen/text_dimens16"
+                android:textColor="@color/black_text"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        style="@style/haveing"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv_list"
+        android:paddingLeft="@dimen/demen_20dp"
+        android:paddingTop="@dimen/demen_7dp"
+        android:background="@color/white"
+        ></android.support.v7.widget.RecyclerView>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ededed"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginRight="@dimen/demen_12dp"
+                android:layout_marginLeft="@dimen/demen_12dp"
+                android:layout_marginTop="@dimen/demen_8dp"
+                android:layout_marginBottom="@dimen/demen_8dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_whitebg"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                >
+                <ImageView
+                    android:id="@+id/iv_weatepic"
+                    android:layout_width="@dimen/demen_22dp"
+                    android:layout_height="@dimen/demen_22dp"
+                    android:layout_marginTop="@dimen/demen_9dp"
+                    android:layout_marginBottom="@dimen/demen_9dp"
+                    android:layout_marginLeft="@dimen/demen_10dp"
+                    android:layout_marginRight="@dimen/demen_16dp"
+                    android:src="@mipmap/icon_saoma"
+                    />
+                <TextView
+                    style="@style/TextView14black"
+                    android:text="今日雷阵雨20-36℃        空气质量：良好"
+                     />
+            </LinearLayout>
+
+        </RelativeLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_bannerbg"
+            android:layout_marginLeft="@dimen/demen_6dp"
+            android:layout_marginRight="@dimen/demen_6dp"
+            />
+
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
