--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -18,10 +18,12 @@
             <TextView
                 style="@style/TextView16black"
                 android:text="总资产："
+                android:textSize="@dimen/text_dimens20"
                 />
             <TextView
+                android:id="@+id/tv_total"
                 style="@style/TextView16blue"
-                android:text="100000"
+                android:text="0"
                 />
         </LinearLayout>
     <LinearLayout
@@ -32,11 +34,30 @@
         >
         <TextView
             style="@style/TextView16black"
-            android:text="币价："
+            android:text="@string/biprice"
+            android:textSize="@dimen/text_dimens20"
             />
         <TextView
+            android:id="@+id/tv_price"
             style="@style/TextView16blue"
-            android:text="100000"
+            android:text="0 元"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/demen_10dp"
+        >
+        <TextView
+            style="@style/TextView16black"
+            android:text="释放量："
+            android:textSize="@dimen/text_dimens20"
+            />
+        <TextView
+            android:id="@+id/tv_shifang"
+            style="@style/TextView16blue"
+            android:text="0"
             />
     </LinearLayout>
     <View
@@ -54,10 +75,17 @@
             android:text="账号："
             />
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/et_othacc"
+            android:layout_width="0dp"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:hint="请输入转账的账户"
             android:textSize="@dimen/text_dimens16"
+            />
+        <View
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
             />
     </LinearLayout>
     <LinearLayout
@@ -72,28 +100,43 @@
             android:text="金额："
             />
         <EditText
+            android:id="@+id/et_money"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:hint="请输入转账金额"
             android:inputType="number"
             android:textSize="@dimen/text_dimens16"
             />
-            <TextView
-                style="@style/TextView14black"
-                android:text="≈"
-                />
-            <TextView
-                style="@style/TextView16blue"
-                android:text="5"
-                android:textSize="@dimen/demen_18dp"
-                android:layout_marginLeft="@dimen/demen_5dp"
-                android:layout_marginRight="@dimen/demen_5dp"
-                />
-            <TextView
-                style="@style/TextView14black"
-                android:text="个GSC"
-                />
+        <View
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="@dimen/demen_60dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            style="@style/TextView14black"
+            android:text="元 ≈"
+            />
+
+        <TextView
+            android:id="@+id/tv_num"
+            style="@style/TextView16blue"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="@dimen/demen_5dp"
+            android:layout_marginRight="@dimen/demen_5dp"
+            android:text="0"
+            android:textSize="@dimen/demen_18dp" />
+        <TextView
+            style="@style/TextView14black"
+            android:text="个GSC"
+            />
     </LinearLayout>
         <Button
             android:id="@+id/btn_aff"
@@ -106,5 +149,4 @@
             android:textColor="@color/white"
             android:background="@drawable/shape_payment_affblue"
             />
-
 </LinearLayout>
