--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,6 +35,7 @@
 
                 />
                 <TextView
+                    android:id="@+id/tv_address"
                     style="@style/TextView14black"
                     android:text="定位"
                     android:layout_marginLeft="@dimen/demen_6dp"
@@ -148,6 +149,7 @@
         ></android.support.v7.widget.RecyclerView>
 
         <RelativeLayout
+            android:id="@+id/rl_xiaohua"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ededed"
@@ -171,18 +173,20 @@
                     android:layout_marginBottom="@dimen/demen_9dp"
                     android:layout_marginLeft="@dimen/demen_10dp"
                     android:layout_marginRight="@dimen/demen_16dp"
-                    android:src="@mipmap/icon_saoma"
+                    android:src="@mipmap/icon_syxiao"
                     />
                 <TextView
                     style="@style/TextView14black"
-                    android:text="今日雷阵雨20-36℃        空气质量：良好"
+                    android:text="开心一刻                       笑一笑十年少"
                      />
             </LinearLayout>
 
         </RelativeLayout>
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/iv_xingzuo"
+            android:layout_height="@dimen/demen_100dp"
+            android:layout_marginTop="@dimen/demen_20dp"
             android:src="@mipmap/icon_bannerbg"
             android:layout_marginLeft="@dimen/demen_6dp"
             android:layout_marginRight="@dimen/demen_6dp"
