--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,10 +44,10 @@
                 android:layout_height="@dimen/demen_25dp" />
     <EditText
         android:id="@+id/et_phone"
-        android:inputType="phone"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="@dimen/demen_40dp"
-        android:hint="@string/placeinputphone"
+        android:hint="请输入您的账号"
         android:background="@null"
         android:padding="@dimen/demen_10dp"
         android:layout_gravity="center_vertical"
