--- a/app/src/main/res/layout/activity_about_we.xml
+++ b/app/src/main/res/layout/activity_about_we.xml
@@ -6,31 +6,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activitys.AboutWeActivity">
-    <include
-        layout="@layout/toobal_titleblack"
-        />
-        <TextView
-            style="@style/TextView14black"
-            android:padding="@dimen/demen_10dp"
-            android:text="@string/about_info"
-            />
+
+    <include layout="@layout/toobal_titleblack" />
+
+    <TextView
+        style="@style/TextView14black"
+        android:padding="@dimen/demen_10dp"
+        android:text="@string/about_info" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/demen_40dp"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
         <TextView
             style="@style/TextView14black"
-            android:text="客服热线："
-            />
+            android:text="客服热线：" />
+
         <TextView
-            style="@style/TextView14black"
-            android:text="400-112-0258"
-            android:lineSpacingMultiplier="1.2"
             android:id="@+id/tv_phone"
-            android:textColor="@color/colorPrimary"
-            />
+            style="@style/TextView14black"
+            android:lineSpacingMultiplier="1.2"
+            android:text="400-112-0258"
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="@dimen/demen_100dp"
+        android:layout_height="@dimen/demen_100dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/demen_10dp"
+        android:src="@mipmap/uocode" />
+
+    <TextView
+        style="@style/TextView14black"
+        android:layout_gravity="center_horizontal"
+        android:lines="1"
+        android:focusable="true"
+        android:longClickable="true"
+        android:textIsSelectable="true"
+        android:text="http://www.dojav.com:8188/app/dotpay" />
 </LinearLayout>
